# gke-proxied-apps

./: .gitignore  Makefile  README.md
apps/: Makefile
apps/app1/: Makefile
apps/app1/app/: .env  composer.json
apps/app1/app/config/: routes.yaml
apps/app1/app/src/Controller/: HealthController.php
apps/app1/docker/compose/: build.yml  dev.yml
apps/app1/docker/res/: nginx.conf  php.ini  xdebug.ini
apps/app2/: .env  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  setup.cfg  setup.py
apps/app2/docker/compose/: build.yml
apps/app2/docker/files/dev/python/: Dockerfile
apps/app2/docker/res/: nginx.conf
apps/app2/src/zoover/: flask_app.py
apps/app2/tests/zoover/: test_app.py
kubernetes/: Makefile
kubernetes/environment/gke/: jenkins-values.yaml  proxied-apps-values.yaml
kubernetes/environment/local/: proxied-apps-values.yaml
kubernetes/proxied-apps/: Chart.yaml  values.yaml
kubernetes/proxied-apps/templates/: _helpers.tpl
kubernetes/proxied-apps/templates/app1/: app1-deployment.yaml  app1-service.yaml
kubernetes/proxied-apps/templates/app2/: app2-deployment.yaml  app2-service.yaml
kubernetes/proxied-apps/templates/proxy/: ingress.yaml  issuer-letsencrypt-production.yaml  issuer-letsencrypt.yaml  issuer-self-signed.yaml
secrets/: google-cloud-service-acount-keyfile.json.dist  proxied-apps-values.yaml.dist
terraform/: Makefile  docker-compose.yml  google-cloud-settings.env
terraform/src/gke/: container_registry.tf  gke.tf  jenkins.tf  main.tf  outputs.tf  variables.tf  vpc.tf
(+2 files in other folders)
