[metadata]
name = zoover-assignment-rafael-app-2
description = Rafael's Zoover DevOps assignment
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:

[pbr]
skip_git_sdist = True
skip_changelog = True
skip_authors = True
skip_reno = True

[files]
data_files =
    etc/lib/zoover/conf = src/conf/config.ini
